Change CreatedDate and LastUpdated to let Grails manage it automatically

--- a/web-app/css/plaindisplaycss/default.css
+++ b/web-app/css/plaindisplaycss/default.css
@@ -385,7 +385,7 @@
 /*********************************************************************************/
 /* 1-column                                                                      */
 /*********************************************************************************/
-    .box
+    .fullbox
     {
         min-height: 200px;
         margin: 10px 0px;
